# hellground-panel

./: .hgignore  CMakeLists.txt  Doxyfile  LICENCE_PL  config.h.dist  database.cpp  database.h  defines.h  defines.h.dist  main.cpp  menu.cpp  menu.h  textItems.cpp  textItems.h
cmake/: FindJWSMTP.cmake  FindWt.cmake
codeblocks/: HGPlayersPanel.cbp  HGPlayersPanel.depend
css/: description  ie.css  layout.html  menupage.html  pngfix.css  style.css
doc/: Doxyfile
langs/: panel.xml  panel_pl.xml
pages/: accInfo.cpp  accInfo.h  default.cpp  default.h  error.cpp  error.h  register.cpp  register.h
res/: style.css  template.html
res/img/: header.xcf
res/templates/default/: default.tmplt  style.css
sql/: char.sql  panel.sql  realm.sql  spell.sql
sql/updates/: panel_150.sql
src/: CMakeLists.txt  LangsWidget.cpp  LangsWidget.h  TemplateWidget.cpp  TemplateWidget.h  config.cpp  config.h  config.h.dist  config.xml.dist  database.cpp  database.h  defines.h  login.cpp  login.h  main.cpp  main.h  menu.cpp  menu.h  misc.cpp  misc.h  miscAccount.cpp  miscAccount.h  miscCharacter.cpp  miscCharacter.h  miscClient.cpp  miscClient.h  miscError.cpp  miscError.h  miscHash.cpp  miscHash.h  panel.config.dist  slotItems.cpp  slotItems.h  textItems.cpp  textItems.h
src/pages/: accInfo.cpp  accInfo.h  characters.cpp  characters.h  default.cpp  default.h  error.cpp  error.h  licence.cpp  licence.h  logout.cpp  logout.h  passChange.cpp  passChange.h  passRecovery.cpp  passRecovery.h  register.cpp  register.h  serverStatus.cpp  serverStatus.h  support.cpp  support.h  teleport.cpp  teleport.h  vote.cpp  vote.h
visualstudio/: panel.wt.sln
visualstudio/include/Wt/: WConfig.h
visualstudio/lib/: jwsmtp.lib
visualstudio/panel.wt/panel.wt/: panel.wt.vcxproj  panel.wt.vcxproj.filters
